3.6.0-beta6 - ??? 

* 10609: Trigger Action - improved trait summary
*  9596: Pieces dragged off the palette using the palette scale factor instead
    of always full size
*  9391: Beanshell can now access $$ variables in Report Formats

3.6.0-beta5 - 25 October 2021

* 10620: Fix NPE EditPropertiesAction.windowClosed()
* 10616: Fix Counter Detail Viewer failing to launch
* 10615: Fix NPE when moving to an unexpanded stack

3.6.0-beta4 - 24 October 2021

* 10607: P2P address book entries with spaces in address cause
    StringIndexOutOfBoundsException
* 10604: Match blank passwords less eagerly
* 10603: Action Buttons should not respond to Shift+Click, Ctrl+Click,
    Alt+Click, Cmd+Click
* 10602: Don't unselect piece about to get context menu with Ctrl+RightClick
* 10601: Flares weren't responding to Cmd key on MacOS
* 10599: map can be null during GameRefresher
* 10597: Selection Highlighter expressions now found by search
* 10596: Protect CounterDetailViewer from designers who set the drawing scale
    to 0.0
* 10595: Fix crash ending logfiles- beginningState shouldn't be allowed to be
    non-null when outputfile is null
* 10594: Fix crash when copying Toolbar Menu to a newly created map
* 10593: Add description to Prototype Definition
* 10592: Corner case boardpicker exception with multiple boards being moved
    around
* 10591: Protect from GKCs that get sent when no game ever started
* 10590: Better ConfigureTree summary on PieceSlot containing a BasicName-using     piece
* 10589: Fix Mat send-to-location bug (which created problems in Undo &
    multiplayer)
* 10587: Description field & better auto-summary for Does Not Stack
* 10586: Better defaults for Send To Location offsets
* 10585: Movement Trail "initial visibility" and bounding box caching bugs
* 10584: Map "Mark Unmoved" button now accepts a hotkey and a report format
* 10582: Basic Name trait - facilitates creating pieces entirely in prototype
    (alternative way to fill BasicName property)